--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
     <meta property="og:title" content="Traffic Dashboard - Real-time Monitoring" />
     <meta property="og:description" content="Real-time traffic monitoring dashboard with live congestion data, vehicle counts, and interactive map visualization." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="Traffic Dashboard - Real-time Monitoring" />
+    <meta name="twitter:description" content="Real-time traffic monitoring dashboard with live congestion data, vehicle counts, and interactive map visualization." />
   </head>
 
   <body>
